# yantra

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  yantra.cmake
docs/: 010_overview.md  020_concepts.md  030_manual.md  040_developers.md  050_build.md  060_quickstart.md  070_quickstart_tutorial.md
recipes/: README.md  build.sh
recipes/external-amalgamated/: compiler_impl.cpp  grammar.y
recipes/external-separate/: main.cpp
recipes/inline-amalgamated/: grammar.y
recipes/inline-separate/: grammar.y  main.cpp
recipes/multiple-walkers/: grammar.y
samples/: basic.y
samples/tutorial/: calc.1.0.yantra  calc.1.1.yantra  calc.2.1.yantra  calc.3.0.yantra  calc.3.1.yantra
src/: CMakeLists.txt  codeblock.hpp  config.hpp.in  cpp_generator.cpp  cpp_generator.hpp  encoding_ascii.cpp  encoding_utf8.cpp  encodings.hpp  error.hpp  filepos.hpp  grammar.cpp  grammar.hpp  grammar_printer.cpp  grammar_printer.hpp  grammar_yg.hpp  grammar_yglx.cpp  grammar_yglx.hpp  grammar_ygp.cpp  grammar_ygp.hpp  lexer_builder.cpp  lexer_builder.hpp  logger.hpp  main.cpp  nsutil.hpp  options.hpp  parser.cpp  parser.hpp  parser_builder.cpp  parser_builder.hpp  pch.hpp  print.hpp  prototype.cpp  stream.hpp  stringify.cmake  text_writer.hpp  tx_table.hpp  util.hpp
tutorial/: Makefile  README.md  build.cmd  calc.2.0.yantra  calc.2.2.yantra  calc.4.0.yantra  calc.yantra
unittests/: unittests.sh
